package edu.fiuba.algo3.modelo;

public interface Interactuable {
    public abstract void interactuarConVehiculo(Vehiculo vehiculo);

}
